<resources>
    <string name="app_name">Proxy Catcher</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="RegisterLabel">Proxy Catcher</string>
    <string name="action_sign_in">Register</string>
    <string name="newuser">New User?</string>
    <string name="action_sign_in_short">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_user_area">UserAreaActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Register Here !</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot Password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_login1">Sign in</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="any_orientation">1D Any Orientation</string>
    <string name="scan_from_fragment">Scan from fragment</string>
    <string name="front_camera">Front Camera</string>
    <string name="custom_activity">Continuous Scan</string>
    <string name="subjects">Add Subjects</string>
    <string name="toolbar_activity">Activity with Toolbar</string>
    <string name="custom_scanner">Custom Scanner Activity</string>
    <string name="year">Select Student Year</string>
    <string name="scanner_with_margin">Scanner with Margin</string>
    <string name="scanner_with_timeout">Finish Scan in 8 Seconds</string>
    <string name="turn_on_flashlight">Turn on Flashlight</string>
    <string name="turn_off_flashlight">Turn off Flashlight</string>
    <integer name="viewfinder_border_width">4</integer>
    <integer name="viewfinder_border_length">60</integer>
    <string name="page_1">Page 1</string>
    <string name="page_2">Page 2</string>
    <string name="branch_select">Select Branch</string>
    <string name="Year_select">Select Year</string>
    <string name="filter">Filter</string>
    <string name="sort">Sort</string>
    <string name="Semester">Semester</string>
    <string name="Student_Name">StudentName</string>
    <string name="RollNo">StudentRollNo</string>
    <string name="Branch">StudentBranch</string>
    <string name="Year">StudentYear</string>
    <string-array name="Branch_Name">
        <item>EC</item>
        <item>CS</item>
        <item>EE</item>
    </string-array>

    <string-array name="schedule_time">
        <item>3 days</item>
        <item>1 week</item>
        <item>2 weeks</item>
    </string-array>

    <string-array name="Year_Name">
        <item>1st Year</item>
        <item>2nd Year</item>
        <item>3rd Year</item>
        <item>4th Year</item>
    </string-array>

    <string-array name="Semester_Name">
        <item>1st Semester</item>
        <item>2nd Semester</item>
    </string-array>
    <string name="title_activity_parent_main">ParentMainActivity</string>
    <string name="select_rollno">Enter Rollno</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="select_branch">Select Branch</string>
    <string name="select_year">Select Students Year</string>
    <string name="select_subject">Select Subjects</string>
    <string name="select_time">Select Time</string>
    <string name="Search_button">Search</string>
    <string name="cancel">Cancel</string>


    <string name="About_text">This App is mainly used to avoid Proxy during marking the attendance of students in different
    lecturers.</string>
    <string name="version_app">Version</string>
    <string name="version_no">1.0.0</string>
    <string name="Registered_id">Register Email Id</string>
    <string name="Copyright">Copyright &#169; Saxena Industries, Inc </string>
    <string name="Rights">All rights Reserverd</string>
    <string name="Application">Proxy Catcher &#8482; is a not yet a registered trademark.</string>
</resources>


