<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_action_bar_splitter"
    android:clickable="true"
    android:orientation="vertical">

    <ListView
        android:id="@+id/listViewSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        android:padding="8dp" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/no_data_found_textView"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:layout_centerInParent="true"
        android:text="No Data Found. Please select different data."
        android:gravity="center"/>

    <LinearLayout
        android:id="@+id/sorting_layout"
        android:background="@android:color/holo_orange_dark"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="left"
            android:paddingLeft="16dp"
            android:layout_marginBottom="16dp"
            android:text="SORT BY "
            android:textSize="25dp"
            android:textStyle="bold" />
        <View
            android:layout_width="fill_parent"
            android:layout_height="2dip"
            android:background="@android:color/black" />

        <RadioGroup
            android:id="@+id/radioGroup_sort"
            style="@style/Widget.AppCompat.CompoundButton.RadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:padding="8dp"
            android:visibility="visible"
            android:weightSum="4">

            <RadioButton
                android:id="@+id/Radio1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:checked="false"
                android:layoutDirection="rtl"
                android:text="@string/Student_Name"
                android:textAlignment="textStart" />
<!--
            <View
                android:layout_width="fill_parent"
                android:layout_height="2dip"
                android:background="@color/colorPrimary" />-->

            <RadioButton
                android:id="@+id/Radio2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:checked="false"
                android:layoutDirection="rtl"
                android:text="@string/Year"
                android:textAlignment="textStart" />

          <!--  <View
                android:layout_width="fill_parent"
                android:layout_height="2dip"
                android:background="@color/colorPrimary" />
-->
            <RadioButton
                android:id="@+id/Radio3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:checked="true"
                android:layoutDirection="rtl"
                android:text="@string/RollNo"
                android:textAlignment="textStart" />
<!--
            <View
                android:layout_width="fill_parent"
                android:layout_height="2dip"
                android:background="@color/colorPrimary" />-->

            <RadioButton
                android:id="@+id/Radio4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:checked="false"
                android:layoutDirection="rtl"
                android:text="@string/Branch"
                android:textAlignment="textStart" />
        </RadioGroup>

        <LinearLayout
            android:id="@+id/containerButtonSortInterface"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:padding="8dp"
            android:weightSum="2">

            <Button
                android:id="@+id/sort_interface_ok_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/zxing_button_ok"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/sort_interface_cancel_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textAllCaps="false" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/containerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="8dp"
        android:visibility="visible"
        android:weightSum="2">

        <Button
            android:id="@+id/sortStudentData"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sort"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/filterStudentData"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/filter"
            android:textAllCaps="false" />
    </LinearLayout>
</RelativeLayout>