<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/common_action_bar_splitter"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:layout_weight="1.5"
                android:textSize="18sp"
                android:text="Notifications" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switch_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:textSize="18sp"
                android:ellipsize="end"
                android:layout_weight="1.25"
                android:text="Data Sync Schedule" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/time_spinner"
                style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                android:layout_width="0dp"
                android:layout_weight="0.75"
                android:spinnerMode="dialog"
                android:layout_height="match_parent"
                android:entries="@array/schedule_time"
                android:hint="Select Time"
                android:prompt="@string/select_time" />

        </LinearLayout>

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/branch_select"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:spinnerMode="dialog"
            android:entries="@array/Branch_Name"
            android:hint="Branch"
            android:prompt="@string/branch_select" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/year_select"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:entries="@array/Year_Name"
            android:spinnerMode="dialog"
            android:hint="Year"
            android:prompt="@string/year" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/subject_select"
                style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:spinnerMode="dialog"
                android:hint="Subject"
                android:inputType="textPassword"
                android:prompt="@string/select_subject" />

            <!--&lt;!&ndash; Signup Button &ndash;&gt;-->
            <!--<android.support.v7.widget.AppCompatButton-->
                <!--android:id="@+id/add_button"-->
                <!--android:visibility="gone"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_weight="0.5"-->
                <!--android:gravity="center"-->
                <!--android:padding="12dp"-->
                <!--android:text="ADD" />-->

        </LinearLayout>


        <!-- Signup Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/save_settings_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:padding="12dp"
            android:text="Save" />

        <!--  <TextView android:id="@+id/link_login"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="24dp"
              android:text="Already a member? Login"
              android:gravity="center"
              android:textSize="16dip"/>
  -->
    </LinearLayout>
</ScrollView>